{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Movimiento",
            "id": "3ba470d6-95ad-472a-89b4-03b131aeb069",
            "actions": [
                {
                    "name": "Andar",
                    "type": "Value",
                    "id": "b6348aab-d02e-4d4d-a00a-327ccea295dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Correr",
                    "type": "Button",
                    "id": "5587a00a-b1de-46bf-8d13-7f4c1c984444",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Saltar",
                    "type": "Button",
                    "id": "46c374cc-9df6-4233-9a02-bf10a4638d4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b930670-c58b-479e-aac2-ec9aaf375952",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Andar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ec3cf22-cd84-4e2d-af96-0456c7e2eaf1",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Correr",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87ea6b65-fb86-49c6-971f-ff28816e9181",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Saltar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Ataque",
            "id": "be13faee-d999-4648-bdd5-64f79b131927",
            "actions": [
                {
                    "name": "AtaqueBasico",
                    "type": "Button",
                    "id": "7ed7ae33-6d2e-4605-abba-931f6689bd3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc05fa06-6ac0-405f-b7c8-b3b235f35b12",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AtaqueBasico",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}